--- a/chrome/_locales/en/messages.json
+++ b/chrome/_locales/en/messages.json
@@ -14,5 +14,13 @@
 	"ext_default_title":{
 		"message": "Witness This Media",
 		"description": "Browser action popup default title"
+	} ,
+	"ext_auto_tooltip":{
+		"message": "Automatic Witnessing",
+		"description": "Tooltip for automatic witnessing slider"
+	},
+	"ext_manual_tooltip":{
+		"message": "Witness this page now",
+		"description": "Tooltip for manual witness button"
 	}
 }
